# blade

./: .bazelignore  .bazelrc  .envrc  .gitignore  .rustfmt.toml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE.bazel  flake.nix  rustfmt.toml  tailwind.config.js
.bazel-lib/bazelrc/: clippy.bazelrc  convenience.bazelrc  correctness.bazelrc  nix-toolchains.bazelrc  osx.bazelrc  performance.bazelrc  release.bazelrc
.github/workflows/: ci.yaml  release.yaml
blade/: BUILD.bazel  admin.rs  components.rs  counters.rs  darkmode.rs  leptos.toml  lib.rs  main.rs  routes.rs
blade/bep/: BUILD.bazel  buildinfo.rs  buildtoollogs.rs  lib.rs  main.rs  options.rs  print_event.rs  progress.rs  server.rs  session.rs  target.rs
blade/bep/proto_registry/: BUILD.bazel  lib.rs
blade/bep/protos/: BUILD.bazel  build_event_stream.proto  command_line.proto  descriptors.bzl  failure_details.proto  package_load_metrics.proto
blade/bytestream/: BUILD.bazel  lib.rs
blade/bytestream/proto/: BUILD.bazel
blade/components/: BUILD.bazel  accordion.rs  card.rs  clipboard.rs  context.rs  lib.rs  list.rs  measuretime.rs  mod.rs  nav.rs  navigation.rs  searchbar.rs  shellout.rs  statusicon.rs  summaryheader.rs  targetlist.rs  testartifactlist.rs  testinsights.rs  testresults.rs  testrunlist.rs  testsummary.rs  tooltip.rs
blade/components/charts/: barchart.rs  ganttchart.rs  ganttchart_canvas_hybrid.rs  linechart.rs  mod.rs  piechart.rs  scatterplot.rs  tooltip.rs
blade/components/dashboard/: duration_chart.rs  filters.rs  graphs.rs  mod.rs  pass_fail_chart.rs  pass_fail_scatterplot.rs  test_history_table.rs  test_search.rs
blade/darkmode/: BUILD.bazel  lib.rs
blade/db/: BUILD.bazel  envscrub.rs  exec.rs  lib.rs  manager.rs  time.rs
blade/db/postgres/: mod.rs  models.rs  schema.rs
blade/db/postgres/migrations/2023-11-29-101344_init/: down.sql  up.sql
blade/db/postgres/migrations/2025-06-20-211740_newoutput/: down.sql  up.sql
blade/db/postgres/migrations/2025-06-30-075408_outputindex/: down.sql  up.sql
blade/db/postgres/migrations/2025-07-19-000001_add_liveness/: down.sql  up.sql
blade/db/postgres/migrations/2025-07-26-000000_add_profile_uri/: down.sql  up.sql
blade/db/postgres/migrations/2025-09-16-000000_add_indexes/: down.sql  up.sql
blade/db/postgres/migrations/2025-09-16-000100_add_trgm/: down.sql  up.sql
blade/db/postgres/migrations/2025-09-16-000200_fix_large_keyval_indexes/: down.sql  up.sql
blade/db/postgres/migrations/2025-11-19-000000_unique_test_names/: down.sql  up.sql
blade/db/postgres/migrations/2025-11-19-000100_drop_tests_name_trgm/: down.sql  up.sql
blade/db/sqlite/: mod.rs  models.rs  schema.rs
blade/db/sqlite/migrations/2023-11-29-101344_init/: up.sql
blade/db/sqlite/migrations/2024-02-01-092732_options/: down.sql  up.sql
blade/db/sqlite/migrations/2025-06-21-082528_newoutput/: down.sql  up.sql
blade/db/sqlite/migrations/2025-06-30-081840_outputindex/: up.sql
blade/db/sqlite/migrations/2025-07-19-000001_add_liveness/: down.sql  up.sql
blade/db/sqlite/migrations/2025-07-26-000000_add_profile_uri/: down.sql  up.sql
blade/db/sqlite/migrations/2025-11-19-000000_unique_test_names/: down.sql  up.sql
blade/memdump/: BUILD.bazel  lib.rs
blade/metrics/: BUILD.bazel  lib.rs
blade/prototime/: BUILD.bazel  lib.rs
blade/routes/: BUILD.bazel  app.rs  artifact.rs  basic.rs  command.profile  dashboard.rs  details.rs  empty.rs  gantt.rs  invocation.rs  lib.rs  profile.rs  summary.rs  test.rs
blade/shared/: BUILD.bazel  lib.rs
blade/state/: BUILD.bazel  lib.rs
blade/static/: BUILD.bazel  tailwind.css
blade/tailwindmerge/: BUILD.bazel  lib.rs
blade/trace_event_parser/: BUILD.bazel  lib.rs
nix/bazel/: env.nix  flatten.bzl  nixpkgs.nix  runfiles.bzl
nix/cc/: BUILD.bazel  cc.nix
nix/rust/: BUILD.bazel  fenix.nix  global_allocator.bzl  rust.nix  rust_platform.nix  wasm_bindgen.nix
postgres/harness/: BUILD.bazel  lib.rs
prost/: BUILD.bazel
tailwindcss/: tailwindcss.bzl
tools/streamstress/: BUILD.bazel  main.rs
