load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_shared_library")
load("@rules_rust//wasm_bindgen/rules_js:defs.bzl", "js_rust_wasm_bindgen")

rust_binary(
    name = "blade",
    srcs = [
        "components.rs",
        "lib.rs",
        "main.rs",
        "routes.rs",
    ] + glob([
        "routes/**/*.rs",
        "components/**/*.rs",
    ]),
    crate_features = ["ssr"],
    data = [
        "leptos.toml",
        ":blade_wasm",
        "//blade/static",
    ],
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    deps = [
        "//blade/bep",
        "//blade/state",
        "//blade/tailwindmerge",
        "@crate//:actix-files",
        "@crate//:actix-web",
        "@crate//:ansi-to-html",
        "@crate//:anyhow",
        "@crate//:broadcaster",
        "@crate//:cfg-if",
        "@crate//:clap",
        "@crate//:diesel",
        "@crate//:futures",
        "@crate//:lazy_static",
        "@crate//:leptos",
        "@crate//:leptos_actix",
        "@crate//:leptos_meta",
        "@crate//:leptos_router",
        "@crate//:log",
        "@crate//:pretty_env_logger",
        "@crate//:serde",
        "@crate//:tokio",
        "@crate//:tokio-stream",
    ],
)

rust_shared_library(
    name = "blade.wasm",
    srcs = [
        "components.rs",
        "lib.rs",
        "main.rs",
        "routes.rs",
    ] + glob([
        "routes/**/*.rs",
        "components/**/*.rs",
    ]),
    crate_features = ["hydrate"],
    crate_name = "blade",
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//blade/state",
        "//blade/tailwindmerge",
        "@wasm_crate//:ansi-to-html",
        "@wasm_crate//:cfg-if",
        "@wasm_crate//:console_error_panic_hook",
        "@wasm_crate//:console_log",
        "@wasm_crate//:futures",
        "@wasm_crate//:futures-util",
        "@wasm_crate//:gloo-net",
        "@wasm_crate//:leptos",
        "@wasm_crate//:leptos_meta",
        "@wasm_crate//:leptos_router",
        "@wasm_crate//:log",
        "@wasm_crate//:serde",
        "@wasm_crate//:wasm-bindgen",
    ],
)

js_rust_wasm_bindgen(
    name = "blade_wasm",
    target = "web",
    wasm_file = ":blade.wasm",
)
