load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_shared_library")
load("@rules_rust//wasm_bindgen/rules_js:defs.bzl", "js_rust_wasm_bindgen")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("//nix/bazel:runfiles.bzl", "runfiles")

rust_binary(
    name = "blade",
    srcs = [
        "components.rs",
        "lib.rs",
        "main.rs",
        "routes.rs",
    ] + glob([
        "routes/**/*.rs",
        "components/**/*.rs",
    ]),
    crate_features = ["ssr"],
    data = [
        "leptos.toml",
        ":blade_wasm",
        "//blade/static",
    ],
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    deps = [
        "//blade/bep",
        "//blade/bytestream",
        "//blade/db",
        "//blade/state",
        "//blade/tailwindmerge",
        "@crate//:actix-files",
        "@crate//:actix-web",
        "@crate//:ansi-to-html",
        "@crate//:anyhow",
        "@crate//:broadcaster",
        "@crate//:cfg-if",
        "@crate//:clap",
        "@crate//:diesel",
        "@crate//:futures",
        "@crate//:junit-parser",
        "@crate//:lazy_static",
        "@crate//:leptos",
        "@crate//:leptos_actix",
        "@crate//:leptos_meta",
        "@crate//:leptos_router",
        "@crate//:log",
        "@crate//:pretty_env_logger",
        "@crate//:serde",
        "@crate//:time",
        "@crate//:tokio",
        "@crate//:tokio-stream",
        "@crate//:url",
        "@crate//:url-escape",
        "@crate__wasm-bindgen-0.2.87//:wasm_bindgen",
        "@crate__web-sys-0.3.64//:web_sys",
        "@rules_rust//tools/runfiles",
    ],
)

rust_shared_library(
    name = "blade.wasm",
    srcs = [
        "components.rs",
        "lib.rs",
        "main.rs",
        "routes.rs",
    ] + glob([
        "routes/**/*.rs",
        "components/**/*.rs",
    ]),
    crate_features = ["hydrate"],
    crate_name = "blade",
    rustc_env = {
        "SERVER_FN_OVERRIDE_KEY": "bazel",
    },
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = [
        "//blade/state",
        "//blade/tailwindmerge",
        "@wasm_crate//:ansi-to-html",
        "@wasm_crate//:anyhow",
        "@wasm_crate//:cfg-if",
        "@wasm_crate//:console_error_panic_hook",
        "@wasm_crate//:console_log",
        "@wasm_crate//:futures",
        "@wasm_crate//:futures-util",
        "@wasm_crate//:gloo-net",
        "@wasm_crate//:junit-parser",
        "@wasm_crate//:leptos",
        "@wasm_crate//:leptos_meta",
        "@wasm_crate//:leptos_router",
        "@wasm_crate//:log",
        "@wasm_crate//:serde",
        "@wasm_crate//:time",
        "@wasm_crate//:url",
        "@wasm_crate//:url-escape",
        "@wasm_crate//:wasm-bindgen",
        "@wasm_crate__web-sys-0.3.64//:web_sys",
    ],
)

js_rust_wasm_bindgen(
    name = "blade_wasm",
    target = "web",
    wasm_file = ":blade.wasm",
)

runfiles(
    name = "blade_runfiles",
    binary = ":blade",
    root = "/app",
)

pkg_tar(
    name = "blade_tar",
    srcs = [":blade_runfiles"],
)

oci_image(
    name = "blade_image",
    base = "@distroless_base",
    entrypoint = ["/app/blade/blade"],
    workdir = "/app/blade/blade.runfiles/blade",
    tars = [
        ":blade_tar",
        "@oci_base//:closure.tar",
    ],
    tags = ["noosx"],
)

oci_tarball(
    name = "blade_image_tarball",
    image = ":blade_image",
    repo_tags = ["ghcr.io/dolcetriade/blade:latest"],
    tags = ["noosx"],
)
