load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")
load("@rules_proto//proto:proto_toolchain.bzl", "proto_toolchain")

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@crate//:prost",
        "@crate//:prost-reflect",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "@crate//:futures-core",
        "@crate//:tonic",
    ],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    prost_opts = [
        "type_attribute=.=#[derive(prost_reflect::ReflectMessage)]",
        """type_attribute=.=#[prost_reflect(descriptor_pool = "prost_reflect::DescriptorPool::global()"\\, message_name = "{MESSAGE}")]""",
    ],
    prost_plugin = "@crate//:protoc-gen-prost__protoc-gen-prost",
    prost_plugin_flag = "--plugin=protoc-gen-prost=%s",
    prost_runtime = ":prost_runtime",
    prost_types = "@crate//:prost-types",
    tonic_plugin = "@crate//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_runtime = ":tonic_runtime",
)

toolchain(
    name = "prost_toolchain",
    toolchain = "prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
)

proto_toolchain(
    name = "nixprotoc_toolchain_impl",
    proto_compiler = "@protobuf//:protoc",
)

toolchain(
    name = "nixprotoc_toolchain",
    # Bazel does not follow this attribute during analysis, so the referenced repo
    # will only be fetched if this toolchain is selected.
    toolchain = ":nixprotoc_toolchain_impl",
    toolchain_type = "@rules_proto//proto:toolchain_type",
)