load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "test",
    srcs = [
        "server.rs",
    ],
    data = [
        "//blade/bep/protos:bes_descriptors",
        "//blade/bep/protos:bep_descriptors",
    ],
    deps = [
        "//blade/bep/protos:bep_proto",
        "//blade/bep/protos:build_event_stream_rust_proto",
        "@crate//:anyhow",
        "@crate//:async-stream",
        "@crate//:lazy_static",
        "@crate//:log",
        "@crate//:pretty_env_logger",
        "@crate//:prost",
        "@crate//:prost-reflect",
        "@crate//:prost-types",
        "@crate//:serde_json",
        "@crate//:tokio",
        "@crate//:tokio-stream",
        "@crate//:tonic",
        "@crate//:tonic-reflection",
        "@crate//:walkdir",
        "@rules_rust//tools/runfiles",
        "//blade/bep/proto_registry",
    ],
)
