load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "bep",
    srcs = [
        "lib.rs",
        "print_event.rs",
        "progress.rs",
        "target.rs",
    ],
    data = [
        "//blade/bep/protos:bep_descriptors",
        "//blade/bep/protos:bes_descriptors",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//blade/bep/proto_registry",
        "//blade/bep/protos:bep_proto",
        "//blade/bep/protos:build_event_stream_rust_proto",
        "//blade/state",
        "@crate//:anyhow",
        "@crate//:async-stream",
        "@crate//:futures",
        "@crate//:lazy_static",
        "@crate//:log",
        "@crate//:pretty_env_logger",
        "@crate//:prost",
        "@crate//:prost-reflect",
        "@crate//:prost-types",
        "@crate//:scopeguard",
        "@crate//:serde",
        "@crate//:serde_json",
        "@crate//:tokio",
        "@crate//:tokio-stream",
        "@crate//:tonic",
        "@crate//:tonic-reflection",
        "@crate//:walkdir",
        "@crate__regex-1.9.3//:regex",
        "@rules_rust//tools/runfiles",
    ],
)
