load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "bep",
    srcs = [
        "buildinfo.rs",
        "lib.rs",
        "options.rs",
        "print_event.rs",
        "progress.rs",
        "target.rs",
    ],
    data = [
        "//blade/bep/protos:bep_descriptors",
        "//blade/bep/protos:bes_descriptors",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//blade/bep/proto_registry",
        "//blade/bep/protos:bep_proto",
        "//blade/bep/protos:build_event_stream_rust_proto",
        "//blade/bep/protos:empty_proto",
        "//blade/metrics",
        "//blade/prototime",
        "//blade/prototime:duration_proto",
        "//blade/prototime:timestamp_proto",
        "//blade/state",
        "@crate//:anyhow",
        "@crate//:async-stream",
        "@crate//:futures",
        "@crate//:lazy_static",
        "@crate//:prometheus-client",
        "@crate//:prost",
        "@crate//:prost-reflect",
        "@crate//:prost-types",
        "@crate//:regex",
        "@crate//:scopeguard",
        "@crate//:serde",
        "@crate//:serde_json",
        "@crate//:tokio",
        "@crate//:tokio-stream",
        "@crate//:tonic",
        "@crate//:tonic-reflection",
        "@crate//:tracing",
        "@crate//:walkdir",
        "@rules_rust//tools/runfiles",
    ],
)
